syntax = "proto3";

package example.bank.v1;

import "cosmos/msg/v1/msg.proto";

message BankModule {}

service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc Send(MsgSend) returns (MsgSendResponse);
}

message MsgSend {
  bytes from = 1;
  bytes to = 2;
  string denom = 3;
  bytes amount = 4;
}

message MsgSendResponse {}

service Query {
  rpc Balance(QueryBalance) returns (QueryBalanceResponse);
}

message QueryBalance {
  bytes address = 1;
  string denom = 2;
}

message QueryBalanceResponse {
  bytes balance = 1;
}

message InternalSend {
  bytes from = 1;
  bytes to = 2;
  string denom = 3;
  bytes amount = 4;
}

message InternalSendLazy {
  bytes from = 1;
  bytes to = 2;
  string denom = 3;
  bytes amount = 4;
}